slurm-scripts/yaml_logs/.ipynb_checkpoints/mem_yaml_array_44467227_35-checkpoint.err
  File "/om2/user/bjmedina/auditory-memory/memory/src/model/main_v2.py", line 99
    t_step = model_cfg["noise_model"][]
                                      ^
SyntaxError: invalid syntax
